samples/_failures_safe/1761070868_95c0af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3050850.c: In function ‘main’:
./samples/SAFE/__tmp_f3050850.c:162:9: error: expected expression at end of input
  162 |         "BFS Traversal",
      |         ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f3050850.c:162:9: error: expected declaration or statement at end of input
